kubernetes/12-istio-raw/03-authorizationPolicy/authorizationPolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: fla-authorizationpolicy-a
  namespace: fla-na-a
spec:
  action: DENY
  rules:
  - from:
    #- source:
    #    principals: ["cluster.local/ns/fla-na-z/sa/fla-serviceaccount-z"]
    - source:
        namespaces: ["fla-na-z"]
    to:
    - operation:
        hosts: ["fla-service-a.fla-na-a.svc.cluster.local", "fla-service-a.fla-na-a.svc", "fla-service-a"]
        ports: ["8080"]
    #    methods: ["GET"]
    #    paths: ["/*"]
    #- operation:
    #    methods: ["POST"]
    #    paths: ["/data"]
    #when:
    #- key: request.auth.claims[iss]
    #  values: ["https://accounts.google.com"]
